--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "aas-portal:build": "npm run build -w common -w aas-lib -w aas-portal",
         "aas-portal:build:debug": "npm run build:build -w common -w aas-lib -w aas-portal",
         "aas-server:build": "npm run build -w common -w aas-server",
-        "aas-server:build:debug": "npm run build:debug -w common -w aas-server"
+        "aas-server:build:debug": "npm run build:debug -w common -w aas-server",
+        "serve": "npm run build && node --env-file projects/aas-server/.env projects/aas-server/dist/aas-server.js"
     },
     "repository": {
         "type": "git",
@@ -36,79 +37,79 @@
         "./projects/aas-portal"
     ],
     "dependencies": {
-        "@angular/animations": "^17.2.1",
-        "@angular/common": "^17.2.1",
-        "@angular/compiler": "^17.2.1",
-        "@angular/core": "^17.2.1",
-        "@angular/forms": "^17.2.1",
-        "@angular/localize": "^17.2.1",
-        "@angular/platform-browser": "^17.2.1",
-        "@angular/platform-browser-dynamic": "^17.2.1",
-        "@angular/router": "^17.2.1",
+        "@angular/animations": "^17.3.4",
+        "@angular/common": "^17.3.4",
+        "@angular/compiler": "^17.3.4",
+        "@angular/core": "^17.3.4",
+        "@angular/forms": "^17.3.4",
+        "@angular/localize": "^17.3.4",
+        "@angular/platform-browser": "^17.3.4",
+        "@angular/platform-browser-dynamic": "^17.3.4",
+        "@angular/router": "^17.3.4",
         "@babel/polyfill": "^7.4.4",
         "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-        "@ngrx/component-store": "^17.1.0",
-        "@ngrx/effects": "^17.1.0",
-        "@ngrx/store": "^17.1.0",
+        "@ngrx/component-store": "^17.2.0",
+        "@ngrx/effects": "^17.2.0",
+        "@ngrx/store": "^17.2.0",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
         "@popperjs/core": "^2.11.8",
         "@xmldom/xmldom": "^0.8.10",
         "bcryptjs": "^2.4.3",
-        "bootstrap": "^5.3.2",
+        "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
-        "chart.js": "^4.4.1",
+        "chart.js": "^4.4.2",
         "cors": "^2.8.5",
-        "express": "^4.18.2",
+        "express": "^4.19.2",
         "form-data": "^4.0.0",
-        "jimp": "^0.22.10",
+        "jimp": "^0.22.12",
         "jsonwebtoken": "^9.0.2",
         "jszip": "^3.10.1",
         "jwt-decode": "^4.0.0",
         "lodash-es": "^4.17.21",
         "lowdb": "^7.0.1",
-        "mongoose": "^8.1.2",
+        "mongoose": "^8.3.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
-        "mysql2": "^3.9.1",
-        "node-opcua": "^2.120.0",
-        "node-opcua-client-crawler": "^2.120.0",
-        "nodemailer": "^6.9.9",
-        "reflect-metadata": "^0.2.1",
+        "mysql2": "^3.9.4",
+        "node-opcua": "^2.124.0",
+        "node-opcua-client-crawler": "^2.124.0",
+        "nodemailer": "^6.9.13",
+        "reflect-metadata": "^0.2.2",
         "rxjs": "~7.8.1",
         "swagger-ui-express": "^5.0.0",
         "tslib": "^2.6.2",
-        "tsoa": "^6.0.1",
+        "tsoa": "^6.2.0",
         "tsyringe": "^4.8.0",
         "uuid": "^9.0.1",
-        "webdav": "^5.3.2",
-        "winston": "^3.11.0",
+        "webdav": "^5.5.0",
+        "winston": "^3.13.0",
         "winston-daily-rotate-file": "^5.0.0",
         "ws": "^8.16.0",
         "xpath": "^0.0.34",
         "zone.js": "~0.14.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^17.2.0",
-        "@angular-eslint/builder": "17.2.1",
-        "@angular-eslint/eslint-plugin": "17.2.1",
-        "@angular-eslint/eslint-plugin-template": "17.2.1",
-        "@angular-eslint/schematics": "17.2.1",
-        "@angular-eslint/template-parser": "17.2.1",
-        "@angular/cli": "^17.2.0",
-        "@angular/compiler-cli": "^17.2.1",
-        "@babel/plugin-syntax-import-attributes": "^7.23.3",
+        "@angular-devkit/build-angular": "^17.3.4",
+        "@angular-eslint/builder": "17.3.0",
+        "@angular-eslint/eslint-plugin": "17.3.0",
+        "@angular-eslint/eslint-plugin-template": "17.3.0",
+        "@angular-eslint/schematics": "17.3.0",
+        "@angular-eslint/template-parser": "17.3.0",
+        "@angular/cli": "^17.3.4",
+        "@angular/compiler-cli": "^17.3.4",
+        "@babel/plugin-syntax-import-attributes": "^7.24.1",
         "@jest/globals": "^29.7.0",
-        "@ngrx/eslint-plugin": "^17.1.0",
+        "@ngrx/eslint-plugin": "^17.2.0",
         "@semantic-release/git": "^10.0.1",
-        "@semantic-release/github": "^9.2.6",
+        "@semantic-release/github": "^10.0.3",
         "@types/bcryptjs": "^2.4.6",
         "@types/bootstrap": "^5.2.10",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jasmine": "^5.1.4",
         "@types/jquery": "^3.5.29",
-        "@types/jsonwebtoken": "^9.0.5",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash-es": "^4.17.12",
         "@types/morgan": "^1.9.9",
         "@types/multer": "^1.4.11",
@@ -118,28 +119,28 @@
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.8",
         "@types/ws": "^8.5.10",
-        "@typescript-eslint/eslint-plugin": "^7.0.1",
-        "@typescript-eslint/parser": "^7.0.1",
+        "@typescript-eslint/eslint-plugin": "^7.7.0",
+        "@typescript-eslint/parser": "^7.7.0",
         "babel-plugin-transform-import-meta": "^2.2.1",
-        "esbuild": "^0.20.0",
+        "esbuild": "^0.20.2",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "jasmine-core": "^5.1.2",
         "jest": "^29.7.0",
-        "karma": "^6.4.2",
+        "karma": "^6.4.3",
         "karma-chrome-launcher": "^3.2.0",
         "karma-coverage": "^2.2.1",
         "karma-jasmine": "^5.1.0",
         "karma-jasmine-html-reporter": "^2.1.0",
         "karma-junit-reporter": "^2.0.1",
-        "ng-packagr": "^17.2.0",
+        "ng-packagr": "^17.3.0",
         "prettier": "^3.2.5",
         "rimraf": "^5.0.5",
-        "semantic-release": "^23.0.2",
+        "semantic-release": "^23.0.8",
         "supertest": "^6.3.4",
         "ts-jest": "^29.1.2",
-        "tsx": "^4.7.1",
+        "tsx": "^4.7.2",
         "typescript": "^5.2.2"
     }
 }
